# GenMail

./: .gitignore  README.md
.github/workflows/: ci.yml
agent_service/: .env.example  .gitignore  README.md  app.py  config.py  email_utils.py  genmail_client.py  logging_db.py  pyproject.toml  schemas.py
agent_service/agents/: commitments.py  cross_thread.py  digest.py  proactive.py  reply_drafter.py  sender_topics.py  stats.py  summarizer.py  thread_state.py  urgency.py
agent_service/evals/: ground_truth.json  run_evals.py
agent_service/evals/results/: 1777761394.json  1777761672.json  latest.md
agent_service/llm/: __init__.py  _types.py  gemini.py  groq.py  ollama.py
agent_service/prompts/: commitments.py  commitments_verify.py  cross_thread.py  digest.py  reply_drafter.py  sender_topics.py  stats.py  summarize.py  thread_state.py  urgency.py
agent_service/tests/: test_health.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  constants.ts  index.css  main.tsx
client/src/components/: DevControls.tsx  EmailList.tsx  EmailViewer.tsx  InboxIntelligence.tsx  ThemeToggle.tsx
client/src/components/ui/: resizable.tsx
client/src/lib/: agent.ts  theme.ts
server/: pyproject.toml
