[project]
name = "genmail-server"
version = "0.1.0"
description = "AI-powered email"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat-layout app: declare the loose .py files explicitly so setuptools
# doesn't try to auto-discover and trip on agents/ or the runtime instance/ dir.
py-modules = ["main", "models", "seeds"]

[tool.setuptools.packages.find]
exclude = ["instance*", "agents*", ".venv*"]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "fastmcp>=0.2.0",
    "instructor>=1.0.0",
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
]
